drivers: misc: Initial Rivos RoT PCI driver
Basic driver but it does create the DOE mailbox when it detects one.

Signed-off-by: Samuel Ortiz <sameo@rivosinc.com>

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -568,6 +568,10 @@ config RIVOS_RASD
 	help
 	  Support for the Rivos Accelerator Super Duper card.
 
+config RIVOS_ROT
+	tristate "Rivos Root of Trust PCI driver"
+	depends on PCI
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
