RIVOS: misc: rivos-rot: Add kernel API
Add a kernel API to allow other drivers to get a pointer to the RoT
device and interact with its DOE mailbox.

Signed-off-by: Evan Green <evan@rivosinc.com>

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -571,6 +571,7 @@ config RIVOS_RASD
 config RIVOS_ROT
 	tristate "Rivos Root of Trust PCI driver"
 	depends on PCI
+	select PCI_DOE
 
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
