--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -570,6 +570,7 @@ config RIVOS_RASD
 config RIVOS_ROT
 	tristate "Rivos Root of Trust PCI driver"
 	depends on PCI
+	select PCI_DOE
 
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
