RIVOS: isbdm: Notify RoT driver of connection status
Get a pointer ot the Root of Trust device, and notify it when an ISBDM
connection goes up or down. The Root of Trust will eventually use this
to negotiate IDE encryption on the link.

Signed-off-by: Evan Green <evan@rivosinc.com>

--- a/drivers/char/Kconfig
+++ b/drivers/char/Kconfig
@@ -426,6 +426,7 @@ config RIVOS_ISBDM_EX
 	bool "Rivos ISBDM exerciser driver"
 	depends on IOMMU_SVA
 	depends on INFINIBAND
+	depends on RIVOS_ROT
 	default n
 	help
 	  This driver exposes the ISBDM to userspace test programs.
