RIVOS: isbdm: Add flag+hacks for hybrid sim
Hybrid sim is currently a work in progress, many elements don't work.
Add a Kconfig flag and put some hacks in to get hybrid sim enumerating
even without full functionality.

Signed-off-by: Evan Green <evan@rivosinc.com>

--- a/drivers/char/Kconfig
+++ b/drivers/char/Kconfig
@@ -431,4 +431,11 @@ config RIVOS_ISBDM_EX
 	help
 	  This driver exposes the ISBDM to userspace test programs.
 
+config RIVOS_ISBDM_HYBRID_SIM
+	bool "Hacks for ISBDM in hybrid sim"
+	depends on RIVOS_ISBDM_EX
+	default n
+	help
+	  Turn on hacks for using and testing ISBDM in a hybrid sim environment.
+
 endmenu
