RIVOS: config: Enable MMAP_ALLOW_UNINITIALIZED
Signed-off-by: Andrew Bresticker <abrestic@rivosinc.com>

--- a/arch/riscv/configs/rivos_defconfig
+++ b/arch/riscv/configs/rivos_defconfig
@@ -254,3 +254,4 @@ CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
 CONFIG_MEMORY_HOTPLUG=y
 CONFIG_DAX=y
 CONFIG_DEV_DAX=y
+CONFIG_MMAP_ALLOW_UNINITIALIZED=y
